@@ -16,4 +16,4 @@ Bug fixes
  * Streamfields no longer break on validation error
  * Number of validation errors in each tab in the editor is now correctly reported again
  * Userbar now opens on devices with both touch and mouse (Josh Barr)
-
+ * ``wagtail.wagtailadmin.wagtail_hooks`` no longer calls ``static`` during app load, so you can use ``ManifestStaticFilesStorage`` without calling ``collectstatic`` command
