@@ -7,6 +7,7 @@ Changelog
  * Fix: Streamfields no longer break on validation error
  * Fix: Number of validation errors in each tab in the editor is now correctly reported again
  * Fix: Userbar now opens on devices with both touch and mouse (Josh Barr)
+ * Fix: ``wagtail.wagtailadmin.wagtail_hooks`` no longer calls ``static`` during app load, so you can use ``ManifestStaticFilesStorage`` without calling ``collectstatic`` command
 
 
 1.4.1 (17.03.2016)
